Fixes to stats table out of container

--- a/src/main/resources/static/styles/css/responsive.css
+++ b/src/main/resources/static/styles/css/responsive.css
@@ -1,6 +1,6 @@
 @media (max-width: 1100px) {
     html, body {
-        font-size: 1.3em;
+        font-size: 1.2em;
     }
     .feed {
         flex-direction: column;
@@ -48,4 +48,5 @@
         max-width: 100%;
         height: auto;
     }
+
 }
